# logica-proposicional

./: .gitignore  meson.build
src/: main.c
src/gui/: interfaz_grafica.c  interfaz_grafica.h  ventana_principal.c  ventana_principal.h  ventana_secundaria.c  ventana_secundaria.h
src/proposiciones/: arbol_evaluacion.c  arbol_evaluacion.h  filtros.c  filtros.h  proposiciones.c  proposiciones.h
