project('logica_proposicional', 'c')

dependencias_gtk = dependency('gtk4')

archivos_logica = ['src/main.c', 
             'src/gui/ventana_principal.c', 
             'src/gui/ventana_secundaria.c', 
             'src/proposiciones/arbol_evaluacion.c',
             'src/proposiciones/arbol_evaluacion.c', 
             'src/proposiciones/filtros.c'
             ]

executable('logica_proposicional', archivos_logica, dependencies:[dependencias_gtk])